@@ -9,6 +9,7 @@ import de.neemann.digital.core.element.ElementAttributes;
 import de.neemann.digital.core.element.Keys;
 import de.neemann.digital.core.element.PinDescriptions;
 import de.neemann.digital.core.io.In;
+import de.neemann.digital.core.io.IntFormat;
 import de.neemann.digital.draw.elements.IOState;
 import de.neemann.digital.draw.elements.Pin;
 import de.neemann.digital.draw.elements.Pins;
@@ -32,6 +33,7 @@ public class InputShape implements Shape {
 
     private final String label;
     private final PinDescriptions outputs;
+    private final IntFormat format;
     private IOState ioState;
     private SingleValueDialog dialog;
     private Value value;
@@ -50,6 +52,8 @@ public class InputShape implements Shape {
             this.label = attr.getLabel();
         else
             this.label = attr.getLabel() + " (" + pinNumber + ")";
+
+        format = attr.get(Keys.INT_FORMAT);
     }
 
     @Override
@@ -116,7 +120,7 @@ public class InputShape implements Shape {
                 style = Style.getWireStyle(value);
                 if (value.getBits() > 1) {
                     Vector textPos = new Vector(-1 - SIZE, -4 - SIZE);
-                    graphic.drawText(textPos, textPos.add(1, 0), value.getValueString(), Orientation.CENTERBOTTOM, Style.NORMAL);
+                    graphic.drawText(textPos, textPos.add(1, 0), format.format(value), Orientation.CENTERBOTTOM, Style.NORMAL);
                 }
             }
 
